--- a/package.json
+++ b/package.json
@@ -6,16 +6,25 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
+    "child_process": "^1.0.2",
+    "dotenv": "^16.4.5",
+    "instantsearch.css": "^8.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-instantsearch-dom": "^6.40.4",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.11",
+    "typesense": "^1.8.2",
+    "typesense-instantsearch-adapter": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "populate": "node scripts/populateTypesenseIndex.js"
   },
   "eslintConfig": {
     "extends": [
